terraform/modules/jenkins/ec2.tf
data "aws_ami" "ecs_ami" {
  owners      = ["591542846629"]
  name_regex  = "amzn2-ami-ecs-hvm-2.0.20200115-x86_64-ebs"
//  name_regex  = "^amzn2-ami-ecs-hvm-2.0.\\d{8}-x86_64-ebs"
  most_recent = true
}

resource "aws_instance" "jenkins" {
  ami                    = data.aws_ami.ecs_ami.id
  instance_type          = "t2.medium"
  iam_instance_profile   = aws_iam_instance_profile.jenkins_profile.name
  subnet_id              = aws_subnet.private[0].id
  vpc_security_group_ids = [aws_security_group.ec2_internal.id]
  private_ip             = "10.0.0.167"
  key_name               = "jenkins_key_pair"
  user_data              = "#!/usr/bin/env bash\necho ECS_CLUSTER=${aws_ecs_cluster.jenkins_cluster.name} > /etc/ecs/ecs.config"
  tags = merge(
    var.common_tags,
    map(
      "Name", "${var.container_name}-task-definition-${var.environment}",
    )
  )
}

resource "aws_iam_instance_profile" "jenkins_profile" {
  name = "jenkins_instance_profile_${var.environment}"
  role = aws_iam_role.jenkins_ec2_role.name
}

resource "aws_iam_role" "jenkins_ec2_role" {
  name               = "jenkins_lambda_role_${var.environment}"
  assume_role_policy = data.aws_iam_policy_document.jenkins_ec2_assume_role.json
  tags = merge(
    var.common_tags,
    map(
      "Name", "jenkins-lambda-iam-role-${var.environment}",
    )
  )
}

data "aws_iam_policy_document" "jenkins_ec2_assume_role" {
  version = "2012-10-17"
  statement {
    effect  = "Allow"
    actions = ["sts:AssumeRole"]
    principals {
      type        = "Service"
      identifiers = ["ec2.amazonaws.com"]
    }
  }
}

resource "aws_key_pair" "jenkins_key_pair" {
  key_name   = "jenkins_key_pair"
  public_key = "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCOPd65SbGitmEt2SW69HXscqe+m6bN8AqOr4TdA/5O+eLpUDySXxytlcgN1PcX3y5/SXuXqPLmRdlUg6OKD/Uqx1lK2iFsBVWHArhVQWkIEX1VGfo+rlXVWSOcTRZcwp6nuCilWEyAfb3U27mUWqluihw6jTu9/8JmKn03wkmakhLoihizXutftK4AZGoDVdp4lxBAjBA6F0f5yxooK6GfFqRazTjvUr9ICu4sy2B+t9h6GtBERjUc8iw2ddQP597Uv9cAqJkHOiNeqgRJkSZMePlJzasDTCIlyRC/VXaxk+Lv1CKt1jnruf353VZPzamlTabrXSaocuWdi2NMR7NF jenkins_key_pair"
}

resource "aws_iam_policy" "jenkins_ec2_policy" {
  name   = "jenkins_ec2_policy_${var.environment}"
  path   = "/"
  policy = data.aws_iam_policy_document.ecs_policy.json
}

resource "aws_iam_role_policy_attachment" "invoke_api_attach" {
  role       = aws_iam_role.jenkins_ec2_role.name
  policy_arn = aws_iam_policy.jenkins_ec2_policy.arn
}

data "aws_iam_policy_document" "ecs_policy" {
  statement {
    actions = [
      "ec2:DescribeTags",
      "ecs:CreateCluster",
      "ecs:DeregisterContainerInstance",
      "ecs:DiscoverPollEndpoint",
      "ecs:Poll",
      "ecs:RegisterContainerInstance",
      "ecs:StartTelemetrySession",
      "ecs:UpdateContainerInstancesState",
      "ecs:Submit*",
      "ecr:GetAuthorizationToken",
      "ecr:BatchCheckLayerAvailability",
      "ecr:GetDownloadUrlForLayer",
      "ecr:BatchGetImage",
      "logs:CreateLogStream",
      "logs:PutLogEvents"
    ]

    resources = [
      "*",
    ]
  }
}

resource "aws_iam_policy" "jenkins_ec2_backup_policy" {
  name   = "TDRJenkinsBackupPolicy"
  path   = "/"
  policy = data.aws_iam_policy_document.ec2_backup_policy_document.json
}

data "aws_iam_policy_document" "ec2_backup_policy_document" {
  statement {
    actions   = ["s3:ListBucket"]
    resources = ["arn:aws:s3:::tdr-jenkins-backup-mgmt"]
  }
  statement {
    actions = [
      "s3:PutObject",
      "s3:GetObject"
    ]
    resources = ["arn:aws:s3:::tdr-jenkins-backup-mgmt/*"]
  }
}

data "aws_iam_policy_document" "jenkins_backup_assume_role" {
  version = "2012-10-17"
  statement {
    effect  = "Allow"
    actions = ["sts:AssumeRole"]
    principals {
      type        = "Service"
      identifiers = ["ecs-tasks.amazonaws.com"]
    }
  }
}

resource "aws_iam_role" "jenkins_ec2_backup_role" {
  name               = "TDRJenkinsBackupRole"
  assume_role_policy = data.aws_iam_policy_document.jenkins_backup_assume_role.json
  tags = merge(
    var.common_tags,
    map(
      "Name", "jenkins-lambda-iam-role-${var.environment}",
    )
  )
}

resource "aws_iam_role_policy_attachment" "jenkins_backup_policy_attachment" {
  policy_arn = aws_iam_policy.jenkins_ec2_backup_policy.arn
  role       = aws_iam_role.jenkins_ec2_backup_role.name
}
